# Anti-VAC

./: .gitignore  CMakeLists.txt  Cheats.cpp  Cheats.h  HazeDumper.cpp  HazeDumper.h  ProcessManager.cpp  ProcessManager.h  README.md  csgo.json  main.cpp
src/: CMakeLists.txt  main.cpp
src/Cheats/: CMakeLists.txt  Cheats.cpp  Cheats.h
src/HazeDumper/: CMakeLists.txt  HazeDumper.cpp  HazeDumper.h
src/MemManager/: CMakeLists.txt  ProcessManager.cpp  ProcessManager.h
src/Util/: CMakeLists.txt  Vec3.cpp  Vec3.h
